--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -1051,7 +1051,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_sentiments=['Negative 😡','Neutral 😐','Positive 😊']\n",
+    "result_sentiments=['Negative 😡','Positive 😊']\n",
     "preProcessedText=df['text'].apply(preprocess_text)"
    ]
   },
